# mmap-shield

./: Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml  release.yml
benches/: mmap_bench.rs
csrc/: sigsetjmp_shim.c
src/: error.rs  lib.rs
src/fallback/: mod.rs
src/mmap/: guard.rs  mod.rs  prefetch.rs
src/signal/: handler.rs  mod.rs  registry.rs  thread_state.rs
src/sys/: advice.rs  fs_detect.rs  mmap.rs  mod.rs  page.rs  pread.rs
tests/: adversarial_tests.rs  sigbus_tests.rs  unit_tests.rs
tests/nfs_failure_test/: docker-compose.yml  run_test.sh
